CORE-958 map overflow fixed with flex (#272)

--- a/web-app/css/compiled-less/main.css
+++ b/web-app/css/compiled-less/main.css
@@ -15284,9 +15284,6 @@ button.arrow:after {
   max-width: 100px;
   white-space: pre-wrap;
 }
-.streamr-canvas .module .modulebody .leaflet-container {
-  width: 100%;
-}
 .streamr-canvas .module .modulefooter {
   width: 100%;
   margin-top: 3px;
