--- a/web-app/less/unifina/signalPath/module.less
+++ b/web-app/less/unifina/signalPath/module.less
@@ -123,10 +123,6 @@
         max-width: 100px;
         white-space: pre-wrap;
       }
-
-      .leaflet-container {
-        width: 100%;
-      }
     }
 
     .modulefooter {
